--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,7 @@ h2 {
     width:100px;
     height:100px;
 }
+
 .scroll {
     overflow: auto;
     -webkit-overflow-scrolling: touch;
@@ -196,4 +197,9 @@ h2 {
     bottom: 0px;
     left: 0px;
     right: 0px;
+}
+
+li>a.tappable-active {
+    color: #fff;
+    background-color: #4286f5;
 }
